sintaksni_analizator/RubyParser.py
# Generated from sintaksni_analizator/RubyParser.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class RubyParser ( Parser ):

    grammarFileName = "RubyParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'class'", "'module'", "'def'", "'end'", 
                     "'if'", "'else'", "'elsif'", "'while'", "'do'", "'return'", 
                     "'true'", "'false'", "'nil'", "'for'", "'alias'", "'in'", 
                     "'break'", "'..'", "'private'", "'public'", "'protected'", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'='", "'=='", "'!='", 
                     "'<'", "'>'", "'<='", "'>='", "'.'", "'+='", "'-='", 
                     "'*='", "'/='", "'%='", "'**='", "'not'", "'**'", "'&&'", 
                     "'||'", "'!'", "'('", "')'", "'{'", "'}'", "'['", "']'", 
                     "','", "':'", "';'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'attr_accessor'", "'attr_reader'", "'attr_writer'" ]

    symbolicNames = [ "<INVALID>", "CLASS", "MODULE", "DEF", "END", "IF", 
                      "ELSE", "ELSIF", "WHILE", "DO", "RETURN", "TRUE", 
                      "FALSE", "NIL", "FOR", "ALIAS", "IN", "BREAK", "DOTDOT", 
                      "PRIVATE", "PUBLIC", "PROTECTED", "PLUS", "MINUS", 
                      "MUL", "DIV", "MOD", "ASSIGN", "EQ", "NEQ", "LT", 
                      "GT", "LE", "GE", "DOT", "PLUS_ASSIGN", "MINUS_ASSIGN", 
                      "MUL_ASSIGN", "DIV_ASSIGN", "MOD_ASSIGN", "EXP_ASSIGN", 
                      "NOT", "EXP", "AND", "OR", "BANG", "LPAREN", "RPAREN", 
                      "LBRACE", "RBRACE", "LBRACK", "RBRACK", "COMMA", "COLON", 
                      "SEMI", "INT", "FLOAT", "STRING", "INTERPOLATED_STRING", 
                      "ATTR_ACCESSOR", "ATTR_READER", "ATTR_WRITER", "ID", 
                      "INSTANCE_VAR", "ID_GLOBAL", "ID_METHOD", "LINE_COMMENT", 
                      "ML_COMMENT", "CRLF", "WS" ]

    RULE_prog = 0
    RULE_expression_list = 1
    RULE_expression = 2
    RULE_class_definition = 3
    RULE_attribute_definition = 4
    RULE_attr_type = 5
    RULE_global_get = 6
    RULE_global_set = 7
    RULE_global_result = 8
    RULE_method_inline_call = 9
    RULE_method_definition = 10
    RULE_method_definition_body = 11
    RULE_method_definition_header = 12
    RULE_method_name = 13
    RULE_method_definition_params = 14
    RULE_method_definition_params_list = 15
    RULE_method_definition_param_id = 16
    RULE_return_statement = 17
    RULE_method_call = 18
    RULE_method_call_args = 19
    RULE_method_call_param_list = 20
    RULE_method_call_params = 21
    RULE_method_param = 22
    RULE_method_unnamed_param = 23
    RULE_method_named_param = 24
    RULE_method_call_assignment = 25
    RULE_all_result = 26
    RULE_cond_expression = 27
    RULE_if_statement = 28
    RULE_elsif_clause = 29
    RULE_else_clause = 30
    RULE_while_statement = 31
    RULE_for_statement = 32
    RULE_all_assignment = 33
    RULE_statement_body = 34
    RULE_statement_expression_list = 35
    RULE_assignment = 36
    RULE_instance_variable_assignment = 37
    RULE_dynamic_assignment = 38
    RULE_initial_array_assignment = 39
    RULE_array_assignment = 40
    RULE_array_definition = 41
    RULE_array_definition_elements = 42
    RULE_array_selector = 43
    RULE_dynamic_result = 44
    RULE_dynamic_ = 45
    RULE_comparison = 46
    RULE_comp_var = 47
    RULE_lvalue = 48
    RULE_rvalue = 49
    RULE_break_expression = 50
    RULE_str_t = 51
    RULE_float_t = 52
    RULE_int_t = 53
    RULE_bool_t = 54
    RULE_nil_t = 55
    RULE_id_ = 56
    RULE_id_global = 57
    RULE_id_method = 58
    RULE_terminator = 59
    RULE_else_token = 60
    RULE_crlf = 61
    RULE_instance_var = 62
    RULE_modif = 63
    RULE_dots = 64
    RULE_primary = 65
    RULE_inpterp = 66

    ruleNames =  [ "prog", "expression_list", "expression", "class_definition", 
                   "attribute_definition", "attr_type", "global_get", "global_set", 
                   "global_result", "method_inline_call", "method_definition", 
                   "method_definition_body", "method_definition_header", 
                   "method_name", "method_definition_params", "method_definition_params_list", 
                   "method_definition_param_id", "return_statement", "method_call", 
                   "method_call_args", "method_call_param_list", "method_call_params", 
                   "method_param", "method_unnamed_param", "method_named_param", 
                   "method_call_assignment", "all_result", "cond_expression", 
                   "if_statement", "elsif_clause", "else_clause", "while_statement", 
                   "for_statement", "all_assignment", "statement_body", 
                   "statement_expression_list", "assignment", "instance_variable_assignment", 
                   "dynamic_assignment", "initial_array_assignment", "array_assignment", 
                   "array_definition", "array_definition_elements", "array_selector", 
                   "dynamic_result", "dynamic_", "comparison", "comp_var", 
                   "lvalue", "rvalue", "break_expression", "str_t", "float_t", 
                   "int_t", "bool_t", "nil_t", "id_", "id_global", "id_method", 
                   "terminator", "else_token", "crlf", "instance_var", "modif", 
                   "dots", "primary", "inpterp" ]

    EOF = Token.EOF
    CLASS=1
    MODULE=2
    DEF=3
    END=4
    IF=5
    ELSE=6
    ELSIF=7
    WHILE=8
    DO=9
    RETURN=10
    TRUE=11
    FALSE=12
    NIL=13
    FOR=14
    ALIAS=15
    IN=16
    BREAK=17
    DOTDOT=18
    PRIVATE=19
    PUBLIC=20
    PROTECTED=21
    PLUS=22
    MINUS=23
    MUL=24
    DIV=25
    MOD=26
    ASSIGN=27
    EQ=28
    NEQ=29
    LT=30
    GT=31
    LE=32
    GE=33
    DOT=34
    PLUS_ASSIGN=35
    MINUS_ASSIGN=36
    MUL_ASSIGN=37
    DIV_ASSIGN=38
    MOD_ASSIGN=39
    EXP_ASSIGN=40
    NOT=41
    EXP=42
    AND=43
    OR=44
    BANG=45
    LPAREN=46
    RPAREN=47
    LBRACE=48
    RBRACE=49
    LBRACK=50
    RBRACK=51
    COMMA=52
    COLON=53
    SEMI=54
    INT=55
    FLOAT=56
    STRING=57
    INTERPOLATED_STRING=58
    ATTR_ACCESSOR=59
    ATTR_READER=60
    ATTR_WRITER=61
    ID=62
    INSTANCE_VAR=63
    ID_GLOBAL=64
    ID_METHOD=65
    LINE_COMMENT=66
    ML_COMMENT=67
    CRLF=68
    WS=69

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression_list(self):
            return self.getTypedRuleContext(RubyParser.Expression_listContext,0)


        def EOF(self):
            return self.getToken(RubyParser.EOF, 0)

        def terminator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RubyParser.TerminatorContext)
            else:
                return self.getTypedRuleContext(RubyParser.TerminatorContext,i)


        def getRuleIndex(self):
            return RubyParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)




    def prog(self):

        localctx = RubyParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==RubyParser.SEMI or _la==RubyParser.CRLF:
                self.state = 134
                self.terminator(0)
                self.state = 139
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 140
            self.expression_list()
            self.state = 141
            self.match(RubyParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Expression_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RubyParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(RubyParser.ExpressionContext,i)


        def terminator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RubyParser.TerminatorContext)
            else:
                return self.getTypedRuleContext(RubyParser.TerminatorContext,i)


        def getRuleIndex(self):
            return RubyParser.RULE_expression_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression_list" ):
                listener.enterExpression_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression_list" ):
                listener.exitExpression_list(self)




    def expression_list(self):

        localctx = RubyParser.Expression_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_expression_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 143
                self.expression()
                self.state = 144
                self.terminator(0)
                self.state = 148 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << RubyParser.CLASS) | (1 << RubyParser.DEF) | (1 << RubyParser.IF) | (1 << RubyParser.WHILE) | (1 << RubyParser.RETURN) | (1 << RubyParser.TRUE) | (1 << RubyParser.FALSE) | (1 << RubyParser.NIL) | (1 << RubyParser.FOR) | (1 << RubyParser.PRIVATE) | (1 << RubyParser.PUBLIC) | (1 << RubyParser.PROTECTED) | (1 << RubyParser.NOT) | (1 << RubyParser.BANG) | (1 << RubyParser.LPAREN) | (1 << RubyParser.INT) | (1 << RubyParser.FLOAT) | (1 << RubyParser.STRING) | (1 << RubyParser.INTERPOLATED_STRING) | (1 << RubyParser.ID) | (1 << RubyParser.INSTANCE_VAR))) != 0) or _la==RubyParser.ID_GLOBAL or _la==RubyParser.ID_METHOD):
                    break

            self.state = 153
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==RubyParser.SEMI or _la==RubyParser.CRLF:
                self.state = 150
                self.terminator(0)
                self.state = 155
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def class_definition(self):
            return self.getTypedRuleContext(RubyParser.Class_definitionContext,0)


        def method_definition(self):
            return self.getTypedRuleContext(RubyParser.Method_definitionContext,0)


        def method_inline_call(self):
            return self.getTypedRuleContext(RubyParser.Method_inline_callContext,0)


        def if_statement(self):
            return self.getTypedRuleContext(RubyParser.If_statementContext,0)


        def rvalue(self):
            return self.getTypedRuleContext(RubyParser.RvalueContext,0)


        def return_statement(self):
            return self.getTypedRuleContext(RubyParser.Return_statementContext,0)


        def while_statement(self):
            return self.getTypedRuleContext(RubyParser.While_statementContext,0)


        def for_statement(self):
            return self.getTypedRuleContext(RubyParser.For_statementContext,0)


        def instance_variable_assignment(self):
            return self.getTypedRuleContext(RubyParser.Instance_variable_assignmentContext,0)


        def assignment(self):
            return self.getTypedRuleContext(RubyParser.AssignmentContext,0)


        def getRuleIndex(self):
            return RubyParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):

        localctx = RubyParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_expression)
        try:
            self.state = 166
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 156
                self.class_definition()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 157
                self.method_definition()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 158
                self.method_inline_call()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 159
                self.if_statement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 160
                self.rvalue(0)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 161
                self.return_statement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 162
                self.while_statement()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 163
                self.for_statement()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 164
                self.instance_variable_assignment()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 165
                self.assignment()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Class_definitionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.klasa = None # Id_Context
            self.nadklasa = None # Id_Context

        def CLASS(self):
            return self.getToken(RubyParser.CLASS, 0)

        def END(self):
            return self.getToken(RubyParser.END, 0)

        def id_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RubyParser.Id_Context)
            else:
                return self.getTypedRuleContext(RubyParser.Id_Context,i)


        def LT(self):
            return self.getToken(RubyParser.LT, 0)

        def crlf(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RubyParser.CrlfContext)
            else:
                return self.getTypedRuleContext(RubyParser.CrlfContext,i)


        def attribute_definition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RubyParser.Attribute_definitionContext)
            else:
                return self.getTypedRuleContext(RubyParser.Attribute_definitionContext,i)


        def expression_list(self):
            return self.getTypedRuleContext(RubyParser.Expression_listContext,0)


        def getRuleIndex(self):
            return RubyParser.RULE_class_definition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClass_definition" ):
                listener.enterClass_definition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClass_definition" ):
                listener.exitClass_definition(self)




    def class_definition(self):

        localctx = RubyParser.Class_definitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_class_definition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.match(RubyParser.CLASS)
            self.state = 169
            localctx.klasa = self.id_()
            self.state = 172
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==RubyParser.LT:
                self.state = 170
                self.match(RubyParser.LT)
                self.state = 171
                localctx.nadklasa = self.id_()


            self.state = 177
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==RubyParser.CRLF:
                self.state = 174
                self.crlf()
                self.state = 179
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 183
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << RubyParser.ATTR_ACCESSOR) | (1 << RubyParser.ATTR_READER) | (1 << RubyParser.ATTR_WRITER))) != 0):
                self.state = 180
                self.attribute_definition()
                self.state = 185
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 187
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << RubyParser.CLASS) | (1 << RubyParser.DEF) | (1 << RubyParser.IF) | (1 << RubyParser.WHILE) | (1 << RubyParser.RETURN) | (1 << RubyParser.TRUE) | (1 << RubyParser.FALSE) | (1 << RubyParser.NIL) | (1 << RubyParser.FOR) | (1 << RubyParser.PRIVATE) | (1 << RubyParser.PUBLIC) | (1 << RubyParser.PROTECTED) | (1 << RubyParser.NOT) | (1 << RubyParser.BANG) | (1 << RubyParser.LPAREN) | (1 << RubyParser.INT) | (1 << RubyParser.FLOAT) | (1 << RubyParser.STRING) | (1 << RubyParser.INTERPOLATED_STRING) | (1 << RubyParser.ID) | (1 << RubyParser.INSTANCE_VAR))) != 0) or _la==RubyParser.ID_GLOBAL or _la==RubyParser.ID_METHOD:
                self.state = 186
                self.expression_list()


            self.state = 189
            self.match(RubyParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Attribute_definitionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attr_type(self):
            return self.getTypedRuleContext(RubyParser.Attr_typeContext,0)


        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(RubyParser.COLON)
            else:
                return self.getToken(RubyParser.COLON, i)

        def id_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RubyParser.Id_Context)
            else:
                return self.getTypedRuleContext(RubyParser.Id_Context,i)


        def crlf(self):
            return self.getTypedRuleContext(RubyParser.CrlfContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(RubyParser.COMMA)
            else:
                return self.getToken(RubyParser.COMMA, i)

        def getRuleIndex(self):
            return RubyParser.RULE_attribute_definition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttribute_definition" ):
                listener.enterAttribute_definition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttribute_definition" ):
                listener.exitAttribute_definition(self)




    def attribute_definition(self):

        localctx = RubyParser.Attribute_definitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_attribute_definition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 191
            self.attr_type()
            self.state = 192
            self.match(RubyParser.COLON)
            self.state = 193
            self.id_()
            self.state = 199
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==RubyParser.COMMA:
                self.state = 194
                self.match(RubyParser.COMMA)
                self.state = 195
                self.match(RubyParser.COLON)
                self.state = 196
                self.id_()
                self.state = 201
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 202
            self.crlf()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Attr_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ATTR_ACCESSOR(self):
            return self.getToken(RubyParser.ATTR_ACCESSOR, 0)

        def ATTR_READER(self):
            return self.getToken(RubyParser.ATTR_READER, 0)

        def ATTR_WRITER(self):
            return self.getToken(RubyParser.ATTR_WRITER, 0)

        def getRuleIndex(self):
            return RubyParser.RULE_attr_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttr_type" ):
                listener.enterAttr_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttr_type" ):
                listener.exitAttr_type(self)




    def attr_type(self):

        localctx = RubyParser.Attr_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_attr_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 204
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << RubyParser.ATTR_ACCESSOR) | (1 << RubyParser.ATTR_READER) | (1 << RubyParser.ATTR_WRITER))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Global_getContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.var_name = None # LvalueContext
            self.op = None # Token
            self.global_name = None # Id_globalContext

        def lvalue(self):
            return self.getTypedRuleContext(RubyParser.LvalueContext,0)


        def ASSIGN(self):
            return self.getToken(RubyParser.ASSIGN, 0)

        def id_global(self):
            return self.getTypedRuleContext(RubyParser.Id_globalContext,0)


        def getRuleIndex(self):
            return RubyParser.RULE_global_get

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGlobal_get" ):
                listener.enterGlobal_get(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGlobal_get" ):
                listener.exitGlobal_get(self)




    def global_get(self):

        localctx = RubyParser.Global_getContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_global_get)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 206
            localctx.var_name = self.lvalue()
            self.state = 207
            localctx.op = self.match(RubyParser.ASSIGN)
            self.state = 208
            localctx.global_name = self.id_global()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Global_setContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.global_name = None # Id_globalContext
            self.op = None # Token
            self.result = None # All_resultContext

        def id_global(self):
            return self.getTypedRuleContext(RubyParser.Id_globalContext,0)


        def ASSIGN(self):
            return self.getToken(RubyParser.ASSIGN, 0)

        def all_result(self):
            return self.getTypedRuleContext(RubyParser.All_resultContext,0)


        def getRuleIndex(self):
            return RubyParser.RULE_global_set

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGlobal_set" ):
                listener.enterGlobal_set(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGlobal_set" ):
                listener.exitGlobal_set(self)




    def global_set(self):

        localctx = RubyParser.Global_setContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_global_set)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 210
            localctx.global_name = self.id_global()
            self.state = 211
            localctx.op = self.match(RubyParser.ASSIGN)
            self.state = 212
            localctx.result = self.all_result()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Global_resultContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_global(self):
            return self.getTypedRuleContext(RubyParser.Id_globalContext,0)


        def getRuleIndex(self):
            return RubyParser.RULE_global_result

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGlobal_result" ):
                listener.enterGlobal_result(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGlobal_result" ):
                listener.exitGlobal_result(self)




    def global_result(self):

        localctx = RubyParser.Global_resultContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_global_result)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 214
            self.id_global()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Method_inline_callContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def method_call(self):
            return self.getTypedRuleContext(RubyParser.Method_callContext,0)


        def getRuleIndex(self):
            return RubyParser.RULE_method_inline_call

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethod_inline_call" ):
                listener.enterMethod_inline_call(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethod_inline_call" ):
                listener.exitMethod_inline_call(self)




    def method_inline_call(self):
